<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ * Project:  Woody
  ~ * Purpose:  Mobile application for trees mapping.
  ~ * Author:   Stanislav Petriakov, becomeglory@gmail.com
  ~ * *****************************************************************************
  ~ * Copyright (c) 2017 NextGIS, info@nextgis.com
  ~ *
  ~ * This program is free software: you can redistribute it and/or modify
  ~ * it under the terms of the GNU General Public License as published by
  ~ * the Free Software Foundation, either version 3 of the License, or
  ~ * (at your option) any later version.
  ~ *
  ~ * This program is distributed in the hope that it will be useful,
  ~ * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ * GNU General Public License for more details.
  ~ *
  ~ * You should have received a copy of the GNU General Public License
  ~ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <include
        layout="@layout/actionbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/girth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/girth"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/crown_begin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crown_begin"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/crown_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crown_s"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/crown_w"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crown_w"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/crown_n"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crown_n"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/crown_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crown_e"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/placement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placement"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/injury"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/injury"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/finish"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/finish"/>
</LinearLayout>
