<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ * Project:  Woody
  ~ * Purpose:  Mobile application for trees mapping.
  ~ * Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
  ~ * *****************************************************************************
  ~ * Copyright (c) 2016 NextGIS, info@nextgis.com
  ~ *
  ~ * This program is free software: you can redistribute it and/or modify
  ~ * it under the terms of the GNU General Public License as published by
  ~ * the Free Software Foundation, either version 3 of the License, or
  ~ * (at your option) any later version.
  ~ *
  ~ * This program is distributed in the hope that it will be useful,
  ~ * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ * GNU General Public License for more details.
  ~ *
  ~ * You should have received a copy of the GNU General Public License
  ~ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/species"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="normal|bold"
                android:gravity="center_vertical" />

            <ImageView
                app:srcCompat="@drawable/ic_action_delete_light"
                android:id="@+id/delete_action"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="100dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_edit_dark"
                android:id="@+id/edit_action"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_cancel_light"
                android:id="@+id/close_action"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"/>

        </LinearLayout>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coordinates"
            android:layout_weight="1"
            android:textColor="@color/textColorSecondary.Light"
            android:layout_marginBottom="17dp" />
        <!-- Photo -->
        <FrameLayout
            android:id="@+id/photo_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>
        <!-- State -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/state"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>
        <!-- Girth -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/girth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/girth"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>
        <!-- Age -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>
        <!-- Height -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/color_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/height"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>